# g800

./: LICENSE  README.md
copyrom/: copye200.asm  copye200.hex  copyg850.asm  copyg850.hex  manual.euc  manual.txt  manual_en.txt
src/: .gitignore  CMakeLists.txt  Makearc  Makefile  SDL_hex.c  SDL_hex.h  basic.c  basic.cc  basic.h  conf.c  conf.cc  conf.h  depend.c  depend.cc  depend.h  font.h  font.txt  g800.c  g800.cc  g800.h  g800config  g800config.en  g800icon.xpm  init.c  init.cc  io.c  io.cc  iocs.c  iocs.cc  keytop.h  keytop1.txt  keytop2.txt  keytop3.txt  keytopE220_1.txt  keytopE220_2.txt  keytopE220_3.txt  load_rom.cc  load_rom.h  main.cc  makefont.awk  (+32 more)
src/doc/: manual.txt  quick.txt
src/mktbl/: Makefile  parity.c
src/symbols/: font.txt  makefont.awk  makesymbol.awk  symbol2.txt
